# speedtype

./: .pre-commit-config.yaml  README.md  install.sh  justfile  pyproject.toml
src/: main.py
src/speedtype/: main.py
src/speedtype/ui/: app.py
src/speedtype/ui/constants/: colors.py  screens.py  themes.py
src/speedtype/ui/screens/: base.py  session_stats.py  speedtype.tcss  typing_area.py  typing_screen.py  typing_session_stats.py
src/speedtype/ui/types/: session_stats.py  typing_area.py  wpm_plot.py
src/speedtype/ui/widgets/: close_button.py  invalid_chars_plot.py  menu_island.py  navigation_section.py  reload_text.py  section_menu_island.py  stop_button.py  text_configuration.py  text_input.py  typing_area.py
src/speedtype/ui/widgets/invalid_chars_stats/: invalid_symbol_bar.py  invalid_symbols.py
src/speedtype/ui/widgets/menu_island/: button.py  island.py  text.py
src/speedtype/ui/widgets/typing_area/: area.py  text_input.py  types.py
src/speedtype/ui/widgets/typing_value_stats/: stats_section.py  typing_stats.py
src/speedtype/ui/widgets/wpm_plot/: plot.py  time_axis.py  wpm_axis.py  wpm_plot.py
src/ui/constants/: classes.py  colors.py  ids.py  screens.py
src/ui/screens/: speedtype.tcss  typing_area.py
src/ui/widgets/: base.py  button.py  menu_island.py  navigation_section.py  reload_text.py  section_menu_island.py  select_menu_island.py  stop_button.py  text_configuration.py  text_input.py  text_placeholder.py  typing_area.py
