[project]
name = "speedtype"
version = "0.1.0"
description = "TUI for training typing speed."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "funcy>=2.0",
    "textual>=8.2.1",
]

[project.scripts]
speedtype = "speedtype.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
    "textual-dev>=1.8.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
indent-width = 4
extend-exclude = [
    "__pycache__",
]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN002", "ANN003", "COM812"]
preview = true
select = [
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "T20",
    "RET",
    "SLF",
    "SIM",
    "ARG",
    "I",
    "N",
    "E",
    "W",
    "F",
    "PGH003",
    "PGH004",
    "PLC",
    "PLE",
    "TRY",
]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.black]
line-length = 120
